# xencoder

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  makefile
.cache/clangd/index/: IMG.c.DEB06F09FB10FF6F.idx  IMG_WIC.c.B4A3B23B496402AE.idx  IMG_anim_decoder.c.7793BBD66F823F79.idx  IMG_anim_decoder.h.47A17B6639862A09.idx  IMG_anim_encoder.c.BC178D7BE9EDD42B.idx  IMG_anim_encoder.h.1F2487C3773C39A9.idx  IMG_avif.c.137FD5E1BB5BC237.idx  IMG_avif.h.1E04F6744AC60003.idx  IMG_bmp.c.8DDB7211B856262F.idx  IMG_gif.c.12AB4E298CBBB6D3.idx  IMG_gif.h.ABA96A531321AABD.idx  IMG_jpg.c.ECDBBD466049A2CE.idx  IMG_jxl.c.EED3734DB5B17DDA.idx  IMG_lbm.c.678AFF09B6B5A78D.idx  IMG_libpng.c.76C6267FECE76434.idx  IMG_libpng.h.B298F943571EB942.idx  IMG_pcx.c.00579BB250B19793.idx  IMG_png.c.5FF73B5E18B96617.idx  IMG_pnm.c.424DBE3B5B18940F.idx  IMG_qoi.c.EC12BD58AC1F883F.idx  IMG_stb.c.B42D41FEE3D7F32B.idx  IMG_svg.c.52F814E83901353C.idx  IMG_tga.c.D0D7E2E017C6E292.idx  IMG_tif.c.D1CF1F8D1B460E01.idx  IMG_webp.c.2BBEF65373941920.idx  IMG_webp.h.CB64F9A16B1793EF.idx  IMG_xcf.c.FF1B850BCA8A9735.idx  IMG_xpm.c.2335F666C31ED4F9.idx  IMG_xv.c.D39A448CAB9131EF.idx  SDL.c.92441DA7AEEA210F.idx  SDL.h.B73FA0D9F95FF19E.idx  SDL_RLEaccel.c.11B1A0543A73665F.idx  SDL_RLEaccel_c.h.C1AE01AB33372107.idx  SDL_alsa_audio.c.AAFF48473CFE71BF.idx  SDL_alsa_audio.h.F817B6B943DDF256.idx  SDL_appid.c.ED0B77F46B26D295.idx  SDL_appid.h.D3B948B7CD1E9C2A.idx  SDL_assert.c.5DD051AE8069734D.idx  SDL_assert.h.186ACE6EB0EFAF10.idx  SDL_assert_c.h.4DA447F24E270089.idx  (+714 more)
data/: settings.json
src/: main.c  main.cpp  platform.cpp  platform.h
